# revm

./: .TODO  .gitignore  .gitmodules  Cargo.toml  README.md  lib.rs
abi_contract_deployment/src/: main.rs
crates/database/: Cargo.toml
crates/database/interface/: Cargo.toml
crates/database/interface/src/: async_db.rs  empty_db.rs  lib.rs
crates/database/src/: alloydb.rs  in_memory_db.rs
crates/database/src/states/: bundle_account.rs  bundle_state.rs  cache_account.rs  changes.rs  plain_account.rs  reverts.rs  state.rs  transition_account.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: elgamal.rs  encryption_trait.rs  lib.rs
crates/encryption/tests/: encryption_tests.rs
crates/inspector/src/: eip3155.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: host.rs  instructions.rs  interpreter.rs  lib.rs
crates/interpreter/src/gas/: calc.rs
crates/interpreter/src/host/: dummy.rs
crates/interpreter/src/instructions/: arithmetic.rs  bitwise.rs  block_info.rs  contract.rs  control.rs  data.rs  host.rs  macros.rs  memory.rs  stack.rs  system.rs  tx_info.rs  utility.rs
crates/interpreter/src/instructions/contract/: call_helpers.rs
crates/interpreter/src/interpreter/: private_memory.rs  serde.rs  shared_memory.rs  stack.rs
crates/interpreter/src/interpreter_action/: create_inputs.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: garbled_uint.rs  lib.rs
crates/revm/: Cargo.toml
crates/revm/benches/: bench.rs
crates/revm/src/: builder.rs  context.rs  evm.rs  handler.rs  journaled_state.rs
crates/revm/src/context/: evm_context.rs  inner_evm_context.rs
crates/revm/src/handler/handle_types/: execution.rs
crates/revm/src/handler/mainnet/: execution.rs
crates/state/: Cargo.toml
crates/state/src/: account_info.rs  lib.rs  types.rs
crates/wiring/: Cargo.toml
crates/wiring/src/: default.rs
documentation/src/: gvm.md
examples/abi_contract_deployment/: Cargo.toml
examples/abi_contract_deployment/src/: main.rs
examples/add_example/: Cargo.toml
examples/add_example/src/: main.rs
examples/deploy_counter_contract/: Cargo.toml  README.md
examples/deploy_counter_contract/src/: Counter.json  main.rs
examples/elgamal_example/: Cargo.toml
examples/elgamal_example/src/: main.rs
examples/memory_example/: Cargo.toml
examples/memory_example/src/: main.rs
examples/mul_example/: Cargo.toml
examples/mul_example/src/: main.rs
examples/sub_example/: Cargo.toml
examples/sub_example/src/: main.rs
examples/swap_contracts/: Cargo.toml
examples/swap_contracts/src/: lib.rs  main.rs
logs/: fix-private-memory.ini  upstream-abi-execution.ini
