[package]
name = "elgamal-example"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
# REVM dependencies
revm = { workspace = true, features = ["std", "serde"] }
database.workspace = true
interpreter = { workspace = true }
compute = { workspace = true }
primitives = { workspace = true }
encryption = { workspace = true }

# Encryption dependencies
solana-zk-sdk = "2.1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
bincode = "1.3.3"
base64 = "0.13"

# Error handling
anyhow = "1.0.89"
