[package]
name = "swap_contracts"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
revm = { version = "14.0.2", features = [
    "serde",
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }
database.workspace = true
alloy = { version = "0.3", features = ["full"] }
# alloy
alloy-eips = "0.4.2"
alloy-provider = "0.4.2"

# mics
anyhow = "1.0.89"
serde_json = "1.0.133"
thiserror = "1.0.37"
futures = "0.3.5"
futures-util = "0.3.30"
eyre = "0.6.8"
bigdecimal = "0.4.1"
hashbrown = "0.14.0"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
